--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ language: c
 addons:
   apt:
     packages:
-      - arm-none-eabi-gcc
+      - gcc-arm-none-eabi
+      - binutils-arm-none-eabi
+      - gdb-arm-none-eabi
       
 script:
   - cd Projects/Makefile && make
