--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ addons:
       - binutils-arm-none-eabi
       - gdb-arm-none-eabi
       - libnewlib-arm-none-eabi
+      - indent
       
 script:
+  - make indent
   - cd Projects/Makefile && make
-  - cd && make indent
