--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
       - gdb-arm-none-eabi
       - libnewlib-arm-none-eabi
       - indent
+      - dos2unix
       
 script:
   - make indent
